Target Java 17 instead of 21 for broader environment compatibility
SequencedCollection.getFirst() is a Java 21 API; replaced with get(0)
in the two call sites that used it so the project builds on JDK 17.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>